--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
   </div>
   <div class="reference-screenshot-container">
     <span>Reference</span>
-    <div class="reference-screenshot" style="background-image:url(assets/page.png);"></div>
+    <div class="reference-screenshot" style="background-image:url(assets/page.gif);"></div>
   </div>
 
   <div class="name-tag">
